[package]
name = "on-call-sheduler"
version = "0.1.1"
authors = ["wetteyve <yveswetter@gmx.ch>"]
description = "A wasm-pack for computing fair on-call schedules"
license = "MIT/Apache-2.0"
repository = "https://github.com/wetteyve/on-call-sheduler"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
