[package]
name = "on-call-sheduler"
version = "0.1.3"
authors = ["wetteyve <yveswetter@gmx.ch>"]
description = "A wasm-pack for computing fair on-call schedules"
license = "MIT/Apache-2.0"
repository = "git+https://github.com/wetteyve/on-call-sheduler.git"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
js-sys = "0.3.77"
